<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_xs">

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="@dimen/topbar_menu_icon_size"
        android:layout_height="@dimen/topbar_menu_icon_size"
        android:src="@drawable/ic_menu"
        android:tint="@color/primary_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/logoCard"
        android:layout_width="@dimen/topbar_logo_width"
        android:layout_height="@dimen/topbar_logo_height"
        android:layout_marginStart="@dimen/spacing_lg"
        android:contentDescription="@string/content_desc_logo"
        app:cardCornerRadius="@dimen/radius_14dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ivMenu"
        app:layout_constraintStart_toEndOf="@id/ivMenu"
        app:layout_constraintTop_toTopOf="@id/ivMenu"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_desc_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/icon" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/languageSelector"
        android:layout_width="@dimen/topbar_language_width"
        android:layout_height="@dimen/topbar_language_height"
        android:background="@drawable/bg_language_container"
        android:clickable="true"
        android:contentDescription="@string/content_desc_change_language"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onLanguageClick"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_md"
        app:layout_constraintBottom_toBottomOf="@id/logoCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/logoCard">

        <TextView
            android:id="@+id/tvLanguageFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/language_flag"
            android:textSize="@dimen/text_md" />

        <TextView
            android:id="@+id/tvLanguageCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/language_code"
            android:textColor="@color/primary_green_dark"
            android:textSize="@dimen/text_md"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
